# netroids-prototype

./: AABB.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  ClientPlayer.h  Entity.h  GameClient.h  GameEngine.cpp  GameHost.h  GameServer.cpp  MoveHistory.cpp  Net.pb.h  Networking.h  Player.h  README.md  Rendering.cpp  Rendering.h  ServerPlayer.cpp  ServerPlayer.h  Ship.cpp  Ship.h  StateHostGame.cpp  StateRemoteGame.cpp  StateRemoteGame.h  test.vert
src/: AABB.h  Bullet.cpp  CMakeLists.txt  Camera.cpp  Camera.h  ClientPlayer.cpp  GameClient.cpp  GameEngine.cpp  GameEngine.h  GameHost.cpp  GameHost.h  GameServer.h  GameState.h  Input.h  MoveHistory.h  Net.pb.cpp  Net.proto  Networking.cpp  Networking.h  Player.cpp  Rendering.h  ServerPlayer.h  Ship.cpp  StateHostGame.h  main.cpp
